add 1.8 again