@@ -14,7 +14,9 @@ val shenOptions: Seq[String] = Seq(
   "-J-XX:ShenandoahGCHeuristics=compact"
 )
 
-val g1gcOptions = Seq("-J-XX:+UseG1GC")
+val g1gcOptions = Seq(
+  "-J-XX:+UseG1GC"
+)
 
 val jvmOptions = Seq(
   "-J-Xms4G",
@@ -35,16 +37,16 @@ val heapDumpOptions =
 
 val gclog18Options = Seq(
   "-XX:+PrintGC",
-  "-XX:+PrintGCApplicationStoppedTime",
   "-XX:+PrintGCDateStamps",
   "-XX:+PrintGCDetails",
   "-XX:+PrintGCTimeStamps",
+  "-XX:+PrintTLAB",
   "-XX:+PrintTenuringDistribution",
   "-Xloggc:${LOG_DIR}/gc.log"
 )
 
 val gclog9Options =
-  "-Xlog:gc*,gc+age=debug,gc+heap=debug,gc+promotion=debug,safepoint:file=${LOG_DIR}/gc.log:utctime,pid,tags:filecount=10,filesize=1m"
+  "-Xlog:gc*,gc+ergo*=trace,gc+phases*=debug,gc+age=debug,gc+heap=debug,gc+promotion=debug,safepoint:file=${LOG_DIR}/gc.log:utctime,uptime,pid,tags:filecount=10,filesize=1m"
 
 // Create a docker image with sbt docker:publishLocal
 lazy val root = (project in file("."))
@@ -82,8 +84,8 @@ lazy val root = (project in file("."))
     // Don't write out a PID file, it doesn't matter anyway.    
     bashScriptExtraDefines += """addJava "-Dpidfile.path=/dev/null"""",
     bashScriptExtraDefines += """addJava "-Dplay.http.secret.key=a-long-secret-to-defeat-entropy"""",
-    //bashScriptExtraDefines ++= gclog18Options.map(gcOption => s"""addJava "${gcOption}""""),
-    bashScriptExtraDefines += s"""addJava "${gclog9Options}"""",
+    bashScriptExtraDefines ++= gclog18Options.map(gcOption => s"""addJava "${gcOption}""""),
+    //bashScriptExtraDefines += s"""addJava "${gclog9Options}"""",
     //bashScriptExtraDefines += s"""addJava "$jfrOptions"""",
 
     // Expose LOG_DIR as environment variable in Docker.
